Adds Retazos section accordion.

--- a/index.html
+++ b/index.html
@@ -53,16 +53,259 @@
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1>RETAZOS</h1>
-                        <img src="./img/logo_01.png" alt="logo" class="img-responsive" />
-                        <p>Colección 2016</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menú</a>
-                    </div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="page-header">
+                  <h1>RETAZOS <small><a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="glyphicon glyphicon-menu-hamburger"></i></a></small></h1>
+                  <img src="./img/logo_01.png" alt="logo" class="img-responsive" />
                 </div>
+              </div>
             </div>
+            <div class="row panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection1997">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection1997" aria-expanded="true" aria-controls="collapseCollection1997">
+                      Colección 1997
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection1997" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingCollection1997">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection1997_colcha1.jpg" alt="collection1997_colcha1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection1997_colcha2.jpg" alt="collection1997_colcha2">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection1999">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection1999" aria-expanded="false" aria-controls="collapseCollection1999">
+                      Colección 1999
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection1999" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection1999">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection1999_cartuchera1.jpg" alt="collection1999_cartuchera1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection1999_cartuchera2.jpg" alt="collection1999_cartuchera2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection1999_cartuchera3.jpg" alt="collection1999_cartuchera3">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection2009">
+                  <h4 class="panel-title">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection2009" aria-expanded="false" aria-controls="collapseCollection2009">
+                      Colección 2009
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection2009" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2009">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_bolso1.jpg" alt="collection2009_bolso1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_bolso2.jpg" alt="collection2009_bolso2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_bolso3.jpg" alt="collection2009_bolso3">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_llavero1.jpg" alt="collection2009_llavero1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_llavero2.jpg" alt="collection2009_llavero2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_llavero3.jpg" alt="collection2009_llavero3">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_bolsa1.jpg" alt="collection2009_bolsa1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2009_bolsa2.jpg" alt="collection2009_bolsa2">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection2011">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection2011" aria-expanded="true" aria-controls="collapseCollection2011">
+                      Colección 2011
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection2011" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2011">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_falda1.jpg" alt="collection2011_falda1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_falda2.jpg" alt="collection2011_falda2">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_tapete1.jpg" alt="collection2011_tapete1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_tapete2.jpg" alt="collection2011_tapete2">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_porta1.jpg" alt="collection2011_porta1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2011_porta2.jpg" alt="collection2011_porta2">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection2016">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection2016" aria-expanded="true" aria-controls="collapseCollection2016">
+                      Colección 2016
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection2016" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2016">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_bolso1.jpg" alt="collection2016_bolso1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_bolso2.jpg" alt="collection2016_bolso2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_bolso3.jpg" alt="collection2016_bolso3">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral1.jpg" alt="collection2016_morral1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral2.jpg" alt="collection2016_morral2">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral3.jpg" alt="collection2016_morral3">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral4.jpg" alt="collection2016_morral4">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral5.jpg" alt="collection2016_morral5">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_morral6.jpg" alt="collection2016_morral6">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_maleta1.jpg" alt="collection2016_maleta1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2016_maleta2.jpg" alt="collection2016_maleta2">
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- /#page-content-wrapper -->
 
