--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <div class="page-header">
+                <div class="jumbotron">
                   <h1>RETAZOS <small><a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="glyphicon glyphicon-menu-hamburger"></i></a></small></h1>
                   <img src="./img/logo_01.png" alt="logo" class="img-responsive" />
                 </div>
@@ -71,8 +71,9 @@
                     </a>
                   </h4>
                 </div>
-                <div id="collapseCollection1997" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingCollection1997">
+                <div id="collapseCollection1997" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection1997">
                   <div class="panel-body">
+                    <h2>COLCHAS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -98,6 +99,7 @@
                 </div>
                 <div id="collapseCollection1999" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection1999">
                   <div class="panel-body">
+                    <h2>CARTUCHERAS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-4">
                         <a href="#" class="thumbnail">
@@ -128,6 +130,7 @@
                 </div>
                 <div id="collapseCollection2009" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2009">
                   <div class="panel-body">
+                    <h2>BOLSOS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-4">
                         <a href="#" class="thumbnail">
@@ -145,6 +148,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>LLAVEROS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-4">
                         <a href="#" class="thumbnail">
@@ -162,6 +166,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>BOLSAS DE REGALO:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -187,6 +192,7 @@
                 </div>
                 <div id="collapseCollection2011" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2011">
                   <div class="panel-body">
+                    <h2>FALDAS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -199,6 +205,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>TAPETES:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -211,6 +218,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>PORTA TABURETES:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -236,6 +244,7 @@
                 </div>
                 <div id="collapseCollection2016" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2016">
                   <div class="panel-body">
+                    <h2>BOLSOS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-4">
                         <a href="#" class="thumbnail">
@@ -253,6 +262,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>MORRALES:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
@@ -289,6 +299,7 @@
                         </a>
                       </div>
                     </div>
+                    <h2>MALETAS:</h2>
                     <div class="row">
                       <div class="col-xs-12 col-md-6">
                         <a href="#" class="thumbnail">
