Adds index, retazos, contact.

--- a/contact.html
+++ b/contact.html
@@ -54,19 +54,13 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
           <div class="container-fluid">
-            <div class="page-header">
-              <h1 class="text-center">ESPACIO SIDERAL</h1>
-              <img src="./img/espaciosideral1_356x200.jpg" alt="espacio sideral 1" class="img-responsive center-block" />
+            <div class="row page-header">
+              <h1>Contacto</h1>
             </div>
-            <div class="row">
-              <div class="col-xs-6 col-md-3">
-                <a href="./retazos.html" class="thumbnail">
-                  <div class="caption">
-                    <h3>retazos</h3>
-                  </div>
-                  <img src="./img/retazos.jpg" alt="retazos" class="img-responsive" />
-                </a>
-              </div>
+            <div class="row text-center">
+              <h3><a href="mailto:arangoz06@yahoo.es?subject=Acerca%20de%20retazos" target="_blank">arangoz06@yahoo.es</a></h3>
+              <h2>Pedidos: <a href="whatsapp://send?text=Acerca%20de%20retazos" data-action="share/whatsapp/share">+57 3147698201</a></h2>
+              <h3><a href="https://www.google.com.co/maps/@5.0559722,-75.4936265,15z" target="_blank">Manizales</a></h3>
             </div>
           </div>
         </div>
