--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="tras-humantes.net">
+    <meta name="author" content="tras-humantes.net">
 
     <title>. : : Espacio Sideral : : .</title>
 
@@ -42,7 +42,7 @@
                     <a href="./retazos.html">Retazos</a>
                 </li>
                 <li>
-                    <a href="./about.html">Acerca</a>
+                    <a href="./jardines.html">Mini-Jardines</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contacto</a>
@@ -65,6 +65,14 @@
                     <h3>retazos</h3>
                   </div>
                   <img src="./img/retazos.jpg" alt="retazos" class="img-responsive" />
+                </a>
+              </div>
+              <div class="col-xs-6 col-md-3">
+                <a href="./jardines.html" class="thumbnail">
+                  <div class="caption">
+                    <h3>mini-jardines</h3>
+                  </div>
+                  <img src="./img/jardines.png" alt="jardines" class="img-responsive" />
                 </a>
               </div>
             </div>
