--- a/retazos.html
+++ b/retazos.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="tras-humantes.net">
+    <meta name="author" content="tras-humantes.net">
 
     <title>. : : Espacio Sideral : : .</title>
 
@@ -42,7 +42,7 @@
                     <a href="./retazos.html">Retazos</a>
                 </li>
                 <li>
-                    <a href="./about.html">Acerca</a>
+                    <a href="./jardines.html">Mini-Jardines</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contacto</a>
