Updates jardines images filenames extensions, updates index.

--- a/jardines.html
+++ b/jardines.html
@@ -28,7 +28,7 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # VIVERO TRASHUMANTES
-.thumbnail[![vivero 01](img/vivero01.png "vivero 01")]
+.thumbnail[![vivero 01](img/vivero01.jpg "vivero 01")]
 ---
 
 class: center,middle
@@ -36,7 +36,7 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Mini jardines interiores
-.thumbnail[![vivero 02](img/vivero02.png "vivero 02")]
+.thumbnail[![vivero 02](img/vivero02.jpg "vivero 02")]
 ---
 
 class: middle
@@ -44,56 +44,56 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Jardines mini
-.pull-right.thumbnail.col-md-6[![vivero 03](img/vivero03.png "vivero 03")]
+.pull-right.thumbnail.col-md-6[![vivero 03](img/vivero03.jpg "vivero 03")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 04](img/vivero04.png "vivero 04")]
+.thumbnail[![vivero 04](img/vivero04.jpg "vivero 04")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 05](img/vivero05.png "vivero 05")]
+.thumbnail[![vivero 05](img/vivero05.jpg "vivero 05")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 06](img/vivero06.png "vivero 06")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 06](img/vivero06.jpg "vivero 06")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 07](img/vivero07.png "vivero 07")]
+.thumbnail[![vivero 07](img/vivero07.jpg "vivero 07")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5[![vivero 09](img/vivero09.png "vivero 09")]
+.thumbnail.col-md-5[![vivero 09](img/vivero09.jpg "vivero 09")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 10](img/vivero10.png "vivero 10")]
+.thumbnail[![vivero 10](img/vivero10.jpg "vivero 10")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 11](img/vivero11.png "vivero 11")]
+.thumbnail[![vivero 11](img/vivero11.jpg "vivero 11")]
 ---
 
 class: middle
@@ -101,72 +101,72 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Plantas para escritorios
-.thumbnail.col-md-5.col-md-offset-6[![vivero 12](img/vivero12.png "vivero 12")]
+.thumbnail.col-md-5.col-md-offset-6[![vivero 12](img/vivero12.jpg "vivero 12")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6.col-md-offset-3[![vivero 13](img/vivero13.png "vivero 13")]
+.thumbnail.col-md-6.col-md-offset-3[![vivero 13](img/vivero13.jpg "vivero 13")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6.col-md-offset-3[![vivero 14](img/vivero14.png "vivero 14")]
+.thumbnail.col-md-6.col-md-offset-3[![vivero 14](img/vivero14.jpg "vivero 14")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6[![vivero 16](img/vivero16.png "vivero 16")]
-.thumbnail.col-md-4.col-md-offset-2[![vivero 15](img/vivero15.png "vivero 15")]
+.thumbnail.col-md-6[![vivero 16](img/vivero16.jpg "vivero 16")]
+.thumbnail.col-md-4.col-md-offset-2[![vivero 15](img/vivero15.jpg "vivero 15")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6.col-md-offset-3[![vivero 18](img/vivero18.png "vivero 18")]
+.thumbnail.col-md-6.col-md-offset-3[![vivero 18](img/vivero18.jpg "vivero 18")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-10.col-md-offset-1[![vivero 19](img/vivero19.png "vivero 19")]
+.thumbnail.col-md-10.col-md-offset-1[![vivero 19](img/vivero19.jpg "vivero 19")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 20](img/vivero20.png "vivero 20")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 20](img/vivero20.jpg "vivero 20")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 21](img/vivero21.png "vivero 21")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 21](img/vivero21.jpg "vivero 21")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6[![vivero 23](img/vivero23.png "vivero 23")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 22](img/vivero22.png "vivero 22")]
+.thumbnail.col-md-6[![vivero 23](img/vivero23.jpg "vivero 23")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 22](img/vivero22.jpg "vivero 22")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 25](img/vivero25.png "vivero 25")]
+.thumbnail[![vivero 25](img/vivero25.jpg "vivero 25")]
 ---
 
 class: middle
@@ -174,50 +174,50 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Plantas para las paredes
-.thumbnail.col-md-5.pull-right[![vivero 26](img/vivero26.png "vivero 26")]
+.thumbnail.col-md-5.pull-right[![vivero 26](img/vivero26.jpg "vivero 26")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 27](img/vivero27.png "vivero 27")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 27](img/vivero27.jpg "vivero 27")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 28](img/vivero28.png "vivero 28")]
+.thumbnail[![vivero 28](img/vivero28.jpg "vivero 28")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5[![vivero 30](img/vivero30.png "vivero 30")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 29](img/vivero29.png "vivero 29")]
+.thumbnail.col-md-5[![vivero 30](img/vivero30.jpg "vivero 30")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 29](img/vivero29.jpg "vivero 29")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 31](img/vivero31.png "vivero 31")]
+.thumbnail[![vivero 31](img/vivero31.jpg "vivero 31")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 32](img/vivero32.png "vivero 32")]
+.thumbnail[![vivero 32](img/vivero32.jpg "vivero 32")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6[![vivero 33](img/vivero33.png "vivero 33")]
+.thumbnail.col-md-6[![vivero 33](img/vivero33.jpg "vivero 33")]
 # Repisas con plantas mini
 ---
 
@@ -225,21 +225,21 @@ class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 34](img/vivero34.png "vivero 34")]
+.thumbnail[![vivero 34](img/vivero34.jpg "vivero 34")]
 ---
 
 class: center,middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 35](img/vivero35.png "vivero 35")]
+.thumbnail[![vivero 35](img/vivero35.jpg "vivero 35")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-8.col-md-offset-2[![vivero 36](img/vivero36.png "vivero 36")]
+.thumbnail.col-md-8.col-md-offset-2[![vivero 36](img/vivero36.jpg "vivero 36")]
 ---
 
 class: center,middle
@@ -247,7 +247,7 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Plantas que cuelgan
-.thumbnail[![vivero 37](img/vivero37.png "vivero 37")]
+.thumbnail[![vivero 37](img/vivero37.jpg "vivero 37")]
 ---
 
 class: center,middle
@@ -255,23 +255,23 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Plantas mini que cuelgan
-.thumbnail.col-md-4[![vivero 39](img/vivero39.png "vivero 39")]
-.thumbnail.col-md-4.col-md-offset-3[![vivero 38](img/vivero38.png "vivero 38")]
+.thumbnail.col-md-4[![vivero 39](img/vivero39.jpg "vivero 39")]
+.thumbnail.col-md-4.col-md-offset-3[![vivero 38](img/vivero38.jpg "vivero 38")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-4[![vivero 41](img/vivero41.png "vivero 41")]
-.thumbnail.col-md-7.col-md-offset-1[![vivero 40](img/vivero40.png "vivero 40")]
+.thumbnail.col-md-4[![vivero 41](img/vivero41.jpg "vivero 41")]
+.thumbnail.col-md-7.col-md-offset-1[![vivero 40](img/vivero40.jpg "vivero 40")]
 ---
 
 class: center,middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 42](img/vivero42.png "vivero 42")]
+.thumbnail[![vivero 42](img/vivero42.jpg "vivero 42")]
 ---
 
 class: middle
@@ -279,28 +279,28 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Balcones
-.thumbnail.col-md-4.pull-right[![vivero 43](img/vivero43.png "vivero 43")]
+.thumbnail.col-md-4.pull-right[![vivero 43](img/vivero43.jpg "vivero 43")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 44](img/vivero44.png "vivero 44")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 44](img/vivero44.jpg "vivero 44")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 45](img/vivero45.png "vivero 45")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 45](img/vivero45.jpg "vivero 45")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 46](img/vivero46.png "vivero 46")]
+.thumbnail[![vivero 46](img/vivero46.jpg "vivero 46")]
 ---
 
 class: middle
@@ -308,42 +308,42 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Materos reciclados
-.thumbnail.col-md-4.pull-right[![vivero 47](img/vivero47.png "vivero 47")]
+.thumbnail.col-md-4.pull-right[![vivero 47](img/vivero47.jpg "vivero 47")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6.col-md-offset-3[![vivero 48](img/vivero48.png "vivero 48")]
+.thumbnail.col-md-6.col-md-offset-3[![vivero 48](img/vivero48.jpg "vivero 48")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 49](img/vivero49.png "vivero 49")]
+.thumbnail[![vivero 49](img/vivero49.jpg "vivero 49")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-8.col-md-offset-2[![vivero 50](img/vivero50.png "vivero 50")]
+.thumbnail.col-md-8.col-md-offset-2[![vivero 50](img/vivero50.jpg "vivero 50")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 51](img/vivero51.png "vivero 51")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 51](img/vivero51.jpg "vivero 51")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 52](img/vivero52.png "vivero 52")]
+.thumbnail[![vivero 52](img/vivero52.jpg "vivero 52")]
 ---
 
 class: center,middle
@@ -351,43 +351,43 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Terrazas
-.thumbnail[![vivero 53](img/vivero53.png "vivero 53")]
+.thumbnail[![vivero 53](img/vivero53.jpg "vivero 53")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5[![vivero 55](img/vivero55.png "vivero 55")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 54](img/vivero54.png "vivero 54")]
+.thumbnail.col-md-5[![vivero 55](img/vivero55.jpg "vivero 55")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 54](img/vivero54.jpg "vivero 54")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 56](img/vivero56.png "vivero 56")]
+.thumbnail[![vivero 56](img/vivero56.jpg "vivero 56")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 57](img/vivero57.png "vivero 57")]
+.thumbnail[![vivero 57](img/vivero57.jpg "vivero 57")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 58](img/vivero58.png "vivero 58")]
+.thumbnail[![vivero 58](img/vivero58.jpg "vivero 58")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 59](img/vivero59.png "vivero 59")]
+.thumbnail[![vivero 59](img/vivero59.jpg "vivero 59")]
 ---
 
 class: center,middle
@@ -395,73 +395,73 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Antejardines
-.thumbnail[![vivero 60](img/vivero60.png "vivero 60")]
+.thumbnail[![vivero 60](img/vivero60.jpg "vivero 60")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 61](img/vivero61.png "vivero 61")]
+.thumbnail[![vivero 61](img/vivero61.jpg "vivero 61")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-6[![vivero 63](img/vivero63.png "vivero 63")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 62](img/vivero62.png "vivero 62")]
+.thumbnail.col-md-6[![vivero 63](img/vivero63.jpg "vivero 63")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 62](img/vivero62.jpg "vivero 62")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5[![vivero 65](img/vivero65.png "vivero 65")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 64](img/vivero64.png "vivero 64")]
+.thumbnail.col-md-5[![vivero 65](img/vivero65.jpg "vivero 65")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 64](img/vivero64.jpg "vivero 64")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5[![vivero 66](img/vivero66.png "vivero 66")]
-.thumbnail.col-md-5.col-md-offset-1[![vivero 67](img/vivero67.png "vivero 67")]
+.thumbnail.col-md-5[![vivero 66](img/vivero66.jpg "vivero 66")]
+.thumbnail.col-md-5.col-md-offset-1[![vivero 67](img/vivero67.jpg "vivero 67")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail.col-md-5.col-md-offset-3[![vivero 68](img/vivero68.png "vivero 68")]
+.thumbnail.col-md-5.col-md-offset-3[![vivero 68](img/vivero68.jpg "vivero 68")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 69](img/vivero69.png "vivero 69")]
+.thumbnail[![vivero 69](img/vivero69.jpg "vivero 69")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 70](img/vivero70.png "vivero 70")]
+.thumbnail[![vivero 70](img/vivero70.jpg "vivero 70")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 72](img/vivero72.png "vivero 72")]
+.thumbnail[![vivero 72](img/vivero72.jpg "vivero 72")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 73](img/vivero73.png "vivero 73")]
+.thumbnail[![vivero 73](img/vivero73.jpg "vivero 73")]
 ---
 
 class: middle
@@ -469,14 +469,14 @@ background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
 # Bonsai
-.thumbnail.col-md-5.pull-right[![vivero 74](img/vivero74.png "vivero 74")]
+.thumbnail.col-md-5.pull-right[![vivero 74](img/vivero74.jpg "vivero 74")]
 ---
 
 class: middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-.thumbnail[![vivero 75](img/vivero75.png "vivero 75")]
+.thumbnail[![vivero 75](img/vivero75.jpg "vivero 75")]
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
