--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Espacio Sideral
+                        TrasHumantes
                     </a>
                 </li>
                 <li>
