Updates image filename extension on index.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="caption">
                     <h3>mini-jardines</h3>
                   </div>
-                  <img src="./img/jardines.png" alt="jardines" class="img-responsive" />
+                  <img src="./img/jardines.jpg" alt="jardines" class="img-responsive" />
                 </a>
               </div>
             </div>
