--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Espacio Sideral : : .</title>
+    <title>. : : Tras-Humantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,10 +39,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./retazos.html">Retazos</a>
+                    <a href="./cabin.html">Cabaña</a>
                 </li>
                 <li>
                     <a href="./jardines.html">Mini-Jardines</a>
+                </li>
+                <li>
+                    <a href="./retazos.html">Retazos</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contacto</a>
@@ -55,16 +58,16 @@
         <div id="page-content-wrapper">
           <div class="container-fluid">
             <div class="page-header">
-              <h1 class="text-center">ESPACIO SIDERAL</h1>
-              <img src="./img/espaciosideral1_356x200.jpg" alt="espacio sideral 1" class="img-responsive center-block" />
+              <h1 class="text-center">TRAS-HUMANTES</h1>
+              <img src="./img/cabana/IMG-20181210-WA0013.jpg" alt="espacio sideral 1" class="img-responsive center-block" />
             </div>
             <div class="row">
               <div class="col-xs-6 col-md-3">
                 <a href="./retazos.html" class="thumbnail">
                   <div class="caption">
-                    <h3>retazos</h3>
+                    <h3>cabaña</h3>
                   </div>
-                  <img src="./img/retazos.jpg" alt="retazos" class="img-responsive" />
+                  <img src="./img/cabana/IMG-20181210-WA0014.jpg" alt="retazos" class="img-responsive" />
                 </a>
               </div>
               <div class="col-xs-6 col-md-3">
@@ -73,6 +76,14 @@
                     <h3>mini-jardines</h3>
                   </div>
                   <img src="./img/jardines.jpg" alt="jardines" class="img-responsive" />
+                </a>
+              </div>
+              <div class="col-xs-6 col-md-3">
+                <a href="./retazos.html" class="thumbnail">
+                  <div class="caption">
+                    <h3>retazos</h3>
+                  </div>
+                  <img src="./img/retazos.jpg" alt="retazos" class="img-responsive" />
                 </a>
               </div>
             </div>
