--- a/retazos.html
+++ b/retazos.html
@@ -35,14 +35,17 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Espacio Sideral
+                        TrasHumantes
                     </a>
                 </li>
                 <li>
-                    <a href="./retazos.html">Retazos</a>
+                    <a href="./cabin.html">Cabaña</a>
                 </li>
                 <li>
                     <a href="./jardines.html">Mini-Jardines</a>
+                </li>
+                <li>
+                    <a href="./retazos.html">Retazos</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contacto</a>
@@ -58,7 +61,7 @@
               <div class="col-lg-12">
                 <div class="jumbotron">
                   <h1>RETAZOS <small><a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="glyphicon glyphicon-menu-hamburger"></i></a></small></h1>
-                  <img src="./img/logo_01.png" alt="logo" class="img-responsive" />
+                  <!-- <img src="./img/logo_01.jpg" alt="logo" class="img-responsive" /> -->
                 </div>
               </div>
             </div>
