Adds cabin page.

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
           <div class="container-fluid">
             <div class="page-header">
               <h1 class="text-center">TRAS-HUMANTES</h1>
-              <img src="./img/cabana/IMG-20181210-WA0013.jpg" alt="espacio sideral 1" class="img-responsive center-block" />
+              <img src="./img/cabana/IMG-20181210-WA0013.jpg" alt="trashumantes 1" class="img-responsive center-block" />
             </div>
             <div class="row">
               <div class="col-xs-6 col-md-3">
-                <a href="./retazos.html" class="thumbnail">
+                <a href="./cabin.html" class="thumbnail">
                   <div class="caption">
                     <h3>cabaña</h3>
                   </div>
-                  <img src="./img/cabana/IMG-20181210-WA0014.jpg" alt="retazos" class="img-responsive" />
+                  <img src="./img/cabana/IMG-20181210-WA0014.jpg" alt="cabaña" class="img-responsive" />
                 </a>
               </div>
               <div class="col-xs-6 col-md-3">
