--- a/retazos.html
+++ b/retazos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Espacio Sideral : : .</title>
+    <title>. : : Tras-Humantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
